--- a/appconfig.json
+++ b/appconfig.json
@@ -1,4 +1,7 @@
 {
-  "Initiator": false,
+  "MyIP": "localhost",
+  "Port": 9002,
+  "Protocol": "http",
+  "Initiator": true,
   "Neighborhood": ["http://localhost:9000", "http://localhost:9001"]
 }
